# cli-skel

./: .gitignore  README.md  environment-dev.yml  environment.yml  pyproject.toml
src/cli-skel/utils/: context_utils.py  sentinels.py
src/cli_skel/: argparse_skel.py  cmd_skel.py
src/cli_skel/utils/: argparse_skel.py  cmd_skel.py  result.py  sentinels.py
tests/: test_cmd_skel.py  test_sentinels.py
utils/: argparse_skel.py  cmd_skel.py  context_utils.py  result.py
