[project]

name = "cli-skel"
# TODO: dynamic version

requires-python = ">=3.12"

authors = [{name = "Michael Frank", email = "frankm@post.bgu.ac.il"}]
maintainers = [{name = "Michael Frank", email = "frankm@post.bgu.ac.il"}]

description = "Generate CLI applications from dictionaries."
readme = "README.md"
license = {file = "LICENSE"}

keywords = ["cli", "argparse", "cmd", "repl"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: CLI Applications",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
# TODO:
#Homepage = "https://example.com"
#Documentation = "https://readthedocs.org"
#Repository = "https://github.com/me/spam.git"
#Issues = "https://github.com/me/spam/issues"
#Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
